lldpd (1.0.6)
  * Fix:
    + Do not loose chassis local information when interface status changes.
    + Fix SNMP walk on lldpRemTable when missing remote system
      name or description.
    + Remove length limitation on system description and platform.
  * Changes:
    + Deprecate use of lldpctl_watch_callback(). Use
      lldpctl_watch_callback2() instead.
    + Upgrade embedded libevent to 2.1.11-stable
    + Add support of sending LLDP frames on a configured VLAN

lldpd (1.0.5)
  * Changes:
    + Interface names are also matched for management addresses.
    + On Linux, only register protocol handler for LLDP when only LLDP
      is enabled.
    + Stricter on LLDP incoming frames validation.
    + Add support for VLAN-aware bridges for Linux (no range support).
    + Add support for 802.3BT (no SNMP support).
    + Add support for millisecond-grained tx-interval (Jean-Pierre Tosoni).
    + Use generic names for VLAN names, instead of interface names (eg
      vlan100 instead of eth1.100).
  * Fix:
    + Don't clear chassis TLV on shutdown LLDPDU.
    + Don't require/display powerpairs for Dot3 power when device type
      is PD.

lldpd (1.0.4)
  * Changes:
    + Add "configure system max-neighbors XX" command to modify maximum
      of neighbors accepted per port.
    + Implement lldpRemOrgDefInfoTable table for custom TLVs.
  * Fix:
    + Better compliance for statsTLVsUnrecognizedTotal and
      statsAgeoutsTotal counters.
    + On Linux, handle rare blocking case in Netlink code.

lldpd (1.0.3)
  * Fix:
    + Fix creation of chroot directory.

lldpd (1.0.2)
  * Changes:
    + On Linux, the monitor process will now drop its privileges
      instead of running as root. It will keep CAP_NET_RAW,
      CAP_NET_ADMIN and CAP_DAC_OVERRIDE capabilities.
    + Support for CDP PD PoE (with negotiation). Thanks to Gustav
      Wiklander.
    + Move support for bonded devices on Linux < 2.6.27 into the
      `--enable-oldies` option. This avoids duplicate packets