@@ -1,3 +1,8 @@
+lldpd (1.0.7)
+  * Fix:
+    + Do not listen only to LLDP packets on Linux. When an interface
+      is enslaved to an Open vSwitch, incoming packets are missed.
+
 lldpd (1.0.6)
   * Fix:
     + Do not loose chassis local information when interface status changes.
